Java compatibility fix